objects/LLC_BI__Contingent_Liabilty__c.object
<CustomObject>
    <description>The Authorized Signer Object is used to capture information about the contact that is assigned as an authorized signer for a relationship.</description>
    <fields>
        <fullName>LLC_BI__Account_Entity_Type__c</fullName>
        <description>This field is a formula field which specifies the entity involvement and account type of the contact associated to the entity involvement record on the loan, as an authorized signer.</description>
        <formula>TEXT(LLC_BI__Entity__r.LLC_BI__Account__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Entity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Attesting_Witness__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional boolean field to indicate the authorized signer is only acting as an attesting witness rather than the authorizing signer. By default, it is false.</description>
        <inlineHelpText>Select this checkbox to indicate that the authorized signer is only acting as an attesting witness rather than the authorizing signer.</inlineHelpText>
        <label>Attesting Witness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Authority__c</fullName>
        <description>This pick-list is used to specify whether the contact listed is &quot;Authorized&quot; or &quot;Not Authorized&quot; as a signer on the loan</description>
        <label>Authority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Not Authorized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Authorized_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field to capture the authorized business for which the current authorized signer is acting.</description>
        <inlineHelpText>The system-populated field associates the authorized signer to an authorized business.</inlineHelpText>
        <label>Authorized Account</label>
        <referenceTo>LLC_BI__Authorized_Account__c</referenceTo>
        <relationshipLabel>Authorized Signers</relationshipLabel>
        <relationshipName>Authorized_Signers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Authorized_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field to capture the authorized signer for which the current authorized signer is acting.</description>
        <inlineHelpText>The system-populated field associates the authorized signer to another authorized signer.</inlineHelpText>
        <label>Authorized Signer</label>
        <referenceTo>LLC_BI__Contingent_Liabilty__c</referenceTo>
        <relationshipLabel>Authorized Signers</relationshipLabel>
        <relationshipName>Authorized_Signers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <description>This field is a look up (Master-Detail) to the Contact records within nCino. Used to specify the contact who will be the authorized signer.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contingent_Liabilties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contingency_Type__c</fullName>
        <description>This field has been deprecated and replaced by Contingent Type on the Entity Involvement record</description>
        <label>-D Contingency Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Joint &amp; Several</fullName>
                    <default>true</default>
                    <label>Joint &amp; Several</label>
                </value>
                <value>
                    <fullName>Pro Rata</fullName>
                </value>
                <value>
                    <fullName>Assign Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Contingent_Percentage__c</fullName>
        <description>This field specifies the percentage of the loan that is represented by this contingency. A percentage can only be specified if the contingency type is &apos;Assign Specific&apos; or &apos;Pro Rata&apos;</description>
        <label>Ownership Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Entity__c</fullName>
        <description>This field is a look up ( Master- Detail) to the entity involvement record of the contact that is to be an authorized signer.</description>
        <label>Entity</label>
        <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
        <relationshipName>Contingent_Liabilties</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__LookupKey__c</fullName>
        <description>The lookupKey is an external ID field, used for importing any authorized signer data the customer has into nCino.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Ownership_Structure_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is automatically set during the Deposit Account Opening workflow to associate an Authorized Signer to a specific Ownership Structure Role.</description>
        <label>Ownership Structure Role</label>
        <referenceTo>LLC_BI__Ownership_Structure_Role__c</referenceTo>
        <relationshipLabel>Authorized Signers</relationshipLabel>
        <relationshipName>Signers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Role__c</fullName>
        <description>This field, a dependent pick list, gives the ability to specify what capacity a contact can act in for a specific relationship.</description>
        <inlineHelpText>Valid options depending on entity type

Association: Officer/Agent
Corporation: Officer/Agent
Government: Official/Agent
LLC: Member/Agent
Partnership: Partner/Agent
Sole Prietorship: Sole Proprietorship
Trust: Trustee/Beneficiary/Agent</inlineHelpText>
        <label>Capacity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Officer</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Official</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
                <value>
                    <fullName>Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__TIN_Certifier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional boolean field to indicate that the signer is qualified to sign TIN certifications or other tax-related documents for the business or entity account holder. By default, it is false.</description>
        <inlineHelpText>Click this checkbox if the signer is qualified to sign TIN certifications or other tax-related documents for the business or entity account holder.</inlineHelpText>
        <label>TIN Certifier</label>
        <type>Checkbox</type>
    </fields>
    <label>Authorized Signer</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Authorized Signer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorized Signers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Capacity_Association</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(text(LLC_BI__Entity__r.LLC_BI__Account__r.Type) == &apos;Association&apos;, text(LLC_BI__Role__c) != &apos;Officer&apos;), AND(text(LLC_BI__Entity__r.LLC_BI__Account__r.Type) == &apos;Association&apos;, text(LLC_BI__Role__c) != &apos;Agent&apos;),NOT(IsBlank(text(LLC_BI__Role__c))))</errorConditionFormula>
        <errorDisplayField>LLC_BI__Role__c</errorDisplayField>
        <errorMessage>The valid capacity options for this entity&apos;s account type (Association) are &quot;Officer&quot; and &quot;Agent&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Capacity_Corporation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(text(LLC_BI__Entity__r.LLC_BI__Account__r.Type) == &apos;Corporation&apos;, text(LLC_BI__Role__c) != &apos;Officer&apos;), AND(text(LLC_BI__Entity__r.LLC_BI__Account__r.Type) == &apos;Corporation&apos;, text(LLC_BI__Role__c) != &apos;Agent&apos;),AND(text(LLC_BI__Entity__r.LLC_BI__Account__r.Type) == &apos;Corporation&apos;,NOT(IsBlank(text(LLC_BI__Role__c)))))</errorConditionFormula>
        <errorDisplayField>LLC_BI__Role__c</errorDisplayField>
        <errorMessage>The valid capacity options for this entity&apos;s account type (Corporation) are &quot;Officer&quot; and &quot;Agent&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Capacity_Government</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(text(LLC_BI__Entity__r.LLC_BI__Account__r.Type) == &apos;Government&apos;, text(LLC_BI__Role__c) != &apos;Official&apos;), AND(text(LLC_BI__Entity__r.LLC_BI__Account__r.Type) == &apos;Government&apos;, text(LLC_BI__Role__c) != &apos;Agent&apos;),NOT(IsBlank(text(LLC_BI__Role__c))))</errorConditionFormula>
        <errorDisplayField>LLC_BI__Role__c</errorDisplayField>
        <errorMessage>The valid capacity options for this entity&apos;s account type (Government) are &quot;Official&quot; and &quot;Agent&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Capacity_Limited_Liability_Company</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(text(LLC_BI__Entity__r.LLC_BI__Account__r.Type) == &apos;Limited Liability Company&apos;, text(LLC_BI__Role__c) != &apos;Member&apos;), AND(text(LLC_BI__Entity__r.LLC_BI__Account__r.Type) == &apos;Limited Liability Company&apos;, text(LLC_BI__Role__c) != &apos;Agent&apos;),NOT(IsBlank(text(LLC_BI__Role__c))))</errorConditionFormula>
        <errorDisplayField>LLC_BI__Role__c</errorDisplayField>
        <errorMessage>The valid capacity options for this entity&apos;s account type (Limited Liability Company) are &quot;Member&quot; and &quot;Agent&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Capacity_Partnership</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(text(LLC_BI__Entity__r.LLC_BI__Account__r.Type) == &apos;Partnership&apos;, text(LLC_BI__Role__c) != &apos;Partner&apos;), AND(text(LLC_BI__Entity__r.LLC_BI__Account__r.Type) == &apos;Partnership&apos;, text(LLC_BI__Role__c) != &apos;Agent&apos;),NOT(IsBlank(text(LLC_BI__Role__c))))</errorConditionFormula>
        <errorDisplayField>LLC_BI__Role__c</errorDisplayField>
        <errorMessage>The valid capacity options for this entity&apos;s account type (Partnership) are &quot;Partner&quot; and &quot;Agent&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Capacity_Soleprietorship</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(text(LLC_BI__Entity__r.LLC_BI__Account__r.Type) == &apos;Sole Proprietorship&apos;, text(LLC_BI__Role__c) != &apos;Sole Proprietorship&apos;), NOT(IsBlank(text(LLC_BI__Role__c))))</errorConditionFormula>
        <errorDisplayField>LLC_BI__Role__c</errorDisplayField>
        <errorMessage>The only valid capacity option for this entity&apos;s account type (Sole Proprietorship) are &quot;Sole Proprietorship&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Capacity_Trust</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
AND(text(LLC_BI__Entity__r.LLC_BI__Account__r.Type) == &apos;Trust&apos;, text(LLC_BI__Role__c) != &apos;Trustee&apos;),
AND(text(LLC_BI__Entity__r.LLC_BI__Account__r.Type) == &apos;Trust&apos;, text(LLC_BI__Role__c) != &apos;Beneficiary&apos;),
AND(text(LLC_BI__Entity__r.LLC_BI__Account__r.Type) == &apos;Trust&apos;, text(LLC_BI__Role__c) != &apos;Agent&apos;),
NOT(IsBlank(text(LLC_BI__Role__c))))</errorConditionFormula>
        <errorDisplayField>LLC_BI__Role__c</errorDisplayField>
        <errorMessage>The valid capacity options for this entity&apos;s account type (Trust) are &quot;Trustee&quot;,&quot;Beneficiary&quot; and &quot;Agent&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__percentage_only_if_assign_specific</fullName>
        <active>false</active>
        <description>--DEPRECATED-- Only populate percentage is contingency type is &apos;Assign Specific&apos; or &apos;Pro Rata&apos;</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>LLC_BI__Contingent_Percentage__c</errorDisplayField>
        <errorMessage>--DEPRECATED-- A percentage can only be specified if the contingency type is &apos;Assign Specific&apos; or  &apos;Pro Rata&apos;</errorMessage>
    </validationRules>
</CustomObject>